    * New make_response function use internally for handlers return values
    * Some results are move to Response subclasses
    * PoorSession can write headers to Response, and no Request is need for that
    * Only DECLINED special return status_code are possible
    * internal parse_negotiation function
    * states and routes application property
    * Documentation update

==== 1.7.0 ====
    * New Application config list form_content_types
    * Form is parsed only when content-type is one of form_content_types
    * Some PEP8 cleaning

==== 1.6.0 ====
    * Profiling rewrite
    * app and application is at poorwsgi module now (__init__.py)
    * Application name property
    * remove deprecated request.SERVER_RETURN
    * remove deprecated Request.add_common_vars
    * remove deprecated Request.subprocess_env
    * results rewrite and fix theis outputs
    * better hbytes as human bytes function
    * better html_escape
    * Application.debug, Application.document_root and
      Application.document_index
    * tests in separate directory
    * new Request is_body_request property
    * PEP8 code style
    * app and appplication is deprecated now
    * documentation fix for new jinja24doc
    * profiling bug fix (problem with Application class)
    * log_info method and encoding error message to ascci when is needed
    * syntax highlighting for example in readme
    * new hex filter
    * code refactoring
    * decode json with content type charset
    * new documentation for some methods and function
    * format python2.6 fix
    * using io.BytesIO insead of StringIO
    * log_info, log_debug and log_warning methods
    * fix circular reference (alias for self.method increment refcount)
    * Request.logger is deprecated now
    * send_json request function
    * new pop_route, pop_rroute, pop_http_state and pop_default methods
    * fix log_error in Application and Request to convert unicode to
      utf-8 string in python2.x